# rayTracer

./: .gitignore  CMakeLists.txt  README.md  Vec3.cpp  a.out  build_and_run.sh  main.cpp  makefile  misc.cpp  objects.cpp  pixel_values.cpp  rayTracer.cpp  rayTracer.h
.github/workflows/: build.yml  main.yml
